Fix customer product database flow and admin order pages